# auth0-test-streamlit-app

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
